# ComfyUI-Nexus

./: .gitignore  README.md  __init__.py  pyproject.toml
classes/: WebSocketManager.py
web/: util.js
web/lib/: nexus.api.js  nexus.chat.js  nexus.cmd.js  nexus.comfy.js  nexus.elements.js  nexus.litegraph.js  nexus.mouse.js  nexus.panel.js  nexus.sockets.js  nexus.styles.js  nexus.user.manager.js  nexus.workflow.js  nexus.workflow.panel.js
